[gd_scene format=3 uid="uid://bgjgx4nyvg7rf"]

[ext_resource type="Texture2D" uid="uid://ckpp4sxwfvnvm" path="res://icon.png" id="1_8a3n0"]
[ext_resource type="Script" uid="uid://bi34vu3riirlk" path="res://Scripts/Classes/UI/GameBananaModContainer.gd" id="1_powvh"]
[ext_resource type="Texture2D" uid="uid://cs6lf66oxc22d" path="res://Assets/Sprites/Players/Luigi/Small.png" id="2_powvh"]
[ext_resource type="Texture2D" uid="uid://xsfs2psb84ql" path="res://Assets/Sprites/UI/EditorButtons.png" id="3_tej74"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4kx1s"]
atlas = ExtResource("2_powvh")
region = Rect2(8, 8, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5snby"]
atlas = ExtResource("3_tej74")
region = Rect2(32, 0, 16, 16)

[node name="GameBananaModContainer" type="Button" unique_id=755289495]
offset_right = 136.0
offset_bottom = 88.0
mouse_filter = 2
script = ExtResource("1_powvh")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1657290485]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 80.0
theme_override_constants/margin_left = -4
theme_override_constants/margin_top = -4
theme_override_constants/margin_right = -4
theme_override_constants/margin_bottom = -4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=577546174]
layout_mode = 2

[node name="Thumbnail" type="TextureRect" parent="MarginContainer/VBoxContainer" unique_id=825870958]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_8a3n0")
expand_mode = 1
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=133554726]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer" unique_id=870453254]
unique_name_in_owner = true
layout_mode = 2
text = "TEST MOD"

[node name="CharacterIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/Name" unique_id=2009123950]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -16.0
offset_right = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("AtlasTexture_4kx1s")
stretch_mode = 3

[node name="PackIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/Name" unique_id=406096585]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -8.0
offset_right = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("AtlasTexture_5snby")

[node name="Author" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1811593063]
unique_name_in_owner = true
modulate = Color(0.5251013, 0.5251013, 0.5251013, 1)
layout_mode = 2
text = "BY PERSON"

[node name="HTTPRequest" type="HTTPRequest" parent="." unique_id=1471643161]

[connection signal="request_completed" from="HTTPRequest" to="." method="on_request_completed"]
